@@ -46,105 +46,16 @@
 void
 curve448_mul (uint8_t *q, const uint8_t *n, const uint8_t *p)
 {
-  const struct ecc_curve *ecc = &_nettle_curve448;
+  const struct ecc_modulo *m = &_nettle_curve448.p;
   mp_size_t itch;
-  mp_limb_t *scratch;
-  int i;
-  mp_limb_t cy;
+  mp_limb_t *x;
 
-  /* FIXME: Could save some more scratch space, e.g., by letting BB
-     overlap C, D, and CB overlap A, D. And possibly reusing some of
-     x2, z2, x3, z3. */
-#define x1 scratch
-#define x2 (scratch + ecc->p.size)
-#define z2 (scratch + 2*ecc->p.size)
-#define x3 (scratch + 3*ecc->p.size)
-#define z3 (scratch + 4*ecc->p.size)
+  itch = m->size + ECC_MUL_M_ITCH(m->size);
+  x = gmp_alloc_limbs (itch);
 
-#define A  (scratch + 5*ecc->p.size)
-#define B  (scratch + 6*ecc->p.size)
-#define C  (scratch + 7*ecc->p.size)
-#define D  (scratch + 8*ecc->p.size)
-#define AA  (scratch + 9*ecc->p.size)
-#define BB  (scratch + 10*ecc->p.size)
-#define E  (scratch + 10*ecc->p.size) /* Overlap BB */
-#define DA  (scratch + 9*ecc->p.size) /* Overlap AA */
-#define CB  (scratch + 10*ecc->p.size) /* Overlap BB */
+  mpn_set_base256_le (x, m->size, p, CURVE448_SIZE);
+  ecc_mul_m (m, 39081, 2, 446, x, n, x, x + m->size);
+  mpn_get_base256_le (q, CURVE448_SIZE, x, m->size);
 
-#define a24 39081
-
-  itch = ecc->p.size * 12;
-  assert (ecc->p.invert_itch + 5*ecc->p.size <= itch);
-  scratch = gmp_alloc_limbs (itch);
-
-  /* Note that 255 % GMP_NUMB_BITS == 0 isn't supported, so x1 always
-     holds at least 256 bits. */
-  mpn_set_base256_le (x1, ecc->p.size, p, CURVE448_SIZE);
-
-  /* Initialize, x2 = x1, z2 = 1 */
-  mpn_copyi (x2, x1, ecc->p.size);
-  z2[0] = 1;
-  mpn_zero (z2+1, ecc->p.size - 1);
-
-  /* Get x3, z3 from doubling. Since bit 447 is forced to 1. */
-  ecc_modp_add (ecc, A, x2, z2);
-  ecc_modp_sub (ecc, B, x2, z2);
-  ecc_modp_sqr (ecc, AA, A);
-  ecc_modp_sqr (ecc, BB, B);
-  ecc_modp_mul (ecc, x3, AA, BB);
-  ecc_modp_sub (ecc, E, AA, BB);
-  ecc_modp_addmul_1 (ecc, AA, E, a24);
-  ecc_modp_mul (ecc, z3, E, AA);
-
-  for (i = 446; i >= 2; i--)
-    {
-      int bit = (n[i/8] >> (i & 7)) & 1;
-
-      cnd_swap (bit, x2, x3, 2*ecc->p.size);
-
-      /* Formulas from RFC 7748. We compute new coordinates in
-	 memory-address order, since mul and sqr clobbers higher
-	 limbs. */
-      ecc_modp_add (ecc, A, x2, z2);
-      ecc_modp_sub (ecc, B, x2, z2);
-      ecc_modp_sqr (ecc, AA, A);
-      ecc_modp_sqr (ecc, BB, B);
-      ecc_modp_mul (ecc, x2, AA, BB);
-      ecc_modp_sub (ecc, E, AA, BB); /* Last use of BB */
-      ecc_modp_addmul_1 (ecc, AA, E, a24);
-      ecc_modp_add (ecc, C, x3, z3);
-      ecc_modp_sub (ecc, D, x3, z3);
-      ecc_modp_mul (ecc, z2, E, AA); /* Last use of E and AA */
-      ecc_modp_mul (ecc, DA, D, A);  /* Last use of D, A. FIXME: could
-					let CB overlap. */
-      ecc_modp_mul (ecc, CB, C, B);
-
-      ecc_modp_add (ecc, C, DA, CB);
-      ecc_modp_sqr (ecc, x3, C);
-      ecc_modp_sub (ecc, C, DA, CB);
-      ecc_modp_sqr (ecc, DA, C);
-      ecc_modp_mul (ecc, z3, DA, x1);
-
-      /* FIXME: Could be combined with the loop's initial cnd_swap. */
-      cnd_swap (bit, x2, x3, 2*ecc->p.size);
-    }
-  /* Do the 2 low zero bits, just duplicating x2 */
-  for ( ; i >= 0; i--)
-    {
-      ecc_modp_add (ecc, A, x2, z2);
-      ecc_modp_sub (ecc, B, x2, z2);
-      ecc_modp_sqr (ecc, AA, A);
-      ecc_modp_sqr (ecc, BB, B);
-      ecc_modp_mul (ecc, x2, AA, BB);
-      ecc_modp_sub (ecc, E, AA, BB);
-      ecc_modp_addmul_1 (ecc, AA, E, a24);
-      ecc_modp_mul (ecc, z2, E, AA);
-    }
-  ecc->p.invert (&ecc->p, x3, z2, z3 + ecc->p.size);
-  ecc_modp_mul (ecc, z3, x2, x3);
-  cy = mpn_sub_n (x2, z3, ecc->p.m, ecc->p.size);
-  cnd_copy (cy, x2, z3, ecc->p.size);
-  mpn_get_base256_le (q, CURVE448_SIZE, x2, ecc->p.size);
-
-  gmp_free_limbs (scratch, itch);
+  gmp_free_limbs (x, itch);
 }
